# 0015_zenn

./: README.md
workspace/: README.md  pyproject.toml
workspace/articles/094af72be38ab9/experiment/: 04_file_io_utils_tutorial.py
workspace/articles/094af72be38ab9/notebooks/: 00_load_data.ipynb  01_load_completejourney.ipynb  02_econml_completejourney.ipynb  03_causal_discovery_completejourney.ipynb
workspace/articles/166163723780a3/viz-poc/: README.md  docker-compose.yml
workspace/articles/166163723780a3/viz-poc/api/: Dockerfile  pyproject.toml
workspace/articles/166163723780a3/viz-poc/dashboard/: Dockerfile  app.py  pyproject.toml
workspace/articles/166163723780a3/viz-poc/data/: sales.csv
workspace/articles/1ceee528ed7ee8/coding_prompt/: work_memo_01.md  work_memo_01_annotation.md  work_memo_02.md  work_memo_03.md
workspace/articles/1ceee528ed7ee8/experiment/: 03_causal_discovery_completejourney.py  04_causal_inference_completejourney.py  05_causal_discovery_inference_completejourney.py  IMPLEMENTATION_SUMMARY.md
workspace/articles/3771bdc6a25760/experiment/: 01_load_completejourney.py  02_econml_completejourney.py  03_causal_discovery_completejourney.py  test_parse_args.py
workspace/articles/3771bdc6a25760/notebooks/: 01_load_completejourney.py  02_econml_completejourney_dag.md  XX_test_pars_args.py
workspace/articles/5132eae5e3dd99/experiment/: 03_causal_discovery_completejourney.py  04_causal_inference_completejourney.py
workspace/articles/5132eae5e3dd99/notebooks/: 01_file_io_utils_tutorial.ipynb  03_causal_discovery_completejourney.ipynb  04_causal_inference_completejourney.ipynb
workspace/articles/_template/notebooks/: 01_file_io_utils_tutorial.ipynb
workspace/articles/a07f0cdc427e09/experiment/: 05_causal_discovery_inference_completejourney.py
workspace/shared/data/00_raw/: README_data.md
(+254 files in other folders)
