[project]
name = "Zenn-workspace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "causal-learn>=0.1.4.5",
    "dask>=2026.3.0",
    "econml>=0.16.0",
    "ipykernel>=7.2.0",
    "pandas>=3.0.2",
    "pyarrow>=24.0.0",
    "pytest>=9.0.3",
    "pyyaml>=6.0.3",
    "rdata>=1.0.0",
]

[tool.uv.workspace]
members = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["shared/py/myproj/src/myproj"]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
