[project]
name = "viz-poc-api"
version = "0.1.0"
description = "FastAPI backend for a lightweight data visualization PoC"
requires-python = ">=3.12,<3.13"
dependencies = [
    "duckdb>=1.4.0",
    "fastapi>=0.120.0",
    "httpx>=0.28.0",
    "pandas>=2.2.0",
    "pyarrow>=18.0.0",
    "pydantic>=2.10.0",
    "pytest>=8.3.0",
    "pyyaml>=6.0.0",
    "uvicorn[standard]>=0.32.0",
]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
